@@ -73,7 +73,7 @@
           <listitem>
             <para>
               When using the <option>--launch</option> option and this option is specified as well, the application will
-              be run in the given <parameter>directory</parameter>. This is primarly useful when running the preferred
+              be run in the given <parameter>directory</parameter>. This is primarily useful when running the preferred
               <emphasis role="bold">TerminalEmulator</emphasis> from another application and you want the command in the
               terminal window to be run in a specific directory.
             </para>
