@@ -338,6 +338,7 @@ exo_job_set_error_if_cancelled
 exo_job_emit
 exo_job_info_message
 exo_job_percent
+exo_job_send_to_mainloop
 <SUBSECTION Standard>
 ExoJobPrivate
 ExoJobClass
